2007-06-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Split TEOv in two, by separating a
	processor for non-TCL_OK returns. Also spli TEOvI in a full
	version that handles non-existing and traced commands, and a
	separate shorter version for the regular case.

	* generic/tclBasic.c:   Moved the generation of command strings	for
	* generic/tclTrace.c:   traces: previously in Tcl_EvalObjv(), now
	in TclCheck[Interp|Execution]Traces(). Also insured that the
	strings are properly nul terminated at the correct length 
	[Bug 1693986]

	***POTENTIAL INCOMPATIBILITY in internal API***
	The functions TclCheckInterpTraces() and TclCheckExecutionTraces()
	(in internal stubs) used to be noops if the command string was
	NULL, this is not true anymore: if the command string is NULL,
	they generate an appropriate string from (objc,objv) and use it to
	call the traces. The caller might as well not call them with a
	NULL string if he was expecting a noop.
	
	* generic/tclBasic.c:   Extend usage of TclLimitReady() and 
	* generic/tclExecute.c: (new) TclLimitExceeded() macros.
	* generic/tclInt.h:
	* generic/tclInterp.c:

	* generic/tclInt.h:     New TclCleanupCommandMacro for core usage.
	* generic/tclBasic.c:
	* generic/tclExecute.c:
	* generic/tclObj.c:

2007-06-09 Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl.xcodeproj/project.pbxproj: add new Tclsh-Info.plist.in.

2007-06-08  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (Tcl_StringObjCmd): Changed [string first] and
	* doc/string.n: [string last] so that they have clearer descriptions
	for those people who know the adage about needles and haystacks. This
	follows suggestions on comp.lang.tcl...

2007-06-06  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c: fix for uninit read [Bug 1732414].

2007-06-06  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl.xcodeproj/project.pbxproj: add settings for Fix&Continue.
